# y-chat

./: .gitignore  Dockerfile  README.md  docker-compose.yml  start.sh  start_db.sh
backend/: Cargo.toml
backend/migrations/: 001_v2.sql  002_server_keys.sql  004_pic.sql
backend/src/: main.rs
backend_v2/: Cargo.toml
backend_v2/migrations/: 003_encrypted_privkey.sql
backend_v2/src/: main.rs
frontend/: index.html  tailwind.config.ts  vite.config.ts
frontend/src/: App.svelte  oldlogin.txt
frontend/src/lib/: AuthCard.svelte  Chat.svelte  config.ts  crypto.ts  types.ts
frontend_v3/: package-lock.json  package.json  vite.config.ts
frontend_v3/src/: App.svelte
frontend_v3/src/lib/: Chat.svelte  config.ts  crypto.ts  types.ts  waChat.svelte
