[package]
name = "backend_v2"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-ws = "0.2"
actix-cors = "0.7.0"
actix-files = "0.6"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
bcrypt = "0.15"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
